// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapseSection [NEGATIVE] should render with wrong props 1`] = `
.c1 {
  margin-top: 3.75rem;
  margin-bottom: 0.75rem;
}

.c1[data-collapsed] + .c0 {
  margin-top: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3:hover {
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 1.5rem;
}

.c4 {
  margin-top: 2rem;
}

<body>
  <div>
    <div
      class="c0 c1"
      data-testid="collapse-section"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-testid="collapse-button"
        >
          <div
            class=""
            data-testid="collapse-title"
          />
          <div
            class=""
          >
            <svg />
          </div>
        </div>
      </div>
      <div
        class="c4"
        data-testid="collapse-body"
      />
    </div>
  </div>
</body>
`;

exports[`CollapseSection [NEGATIVE] should render without props 1`] = `
.c1 {
  margin-top: 3.75rem;
  margin-bottom: 0.75rem;
}

.c1[data-collapsed] + .c0 {
  margin-top: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3:hover {
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 1.5rem;
}

.c4 {
  margin-top: 2rem;
}

<body>
  <div>
    <div
      class="c0 c1"
      data-testid="collapse-section"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-testid="collapse-button"
        >
          <div
            class=""
            data-testid="collapse-title"
          />
          <div
            class=""
          >
            <svg />
          </div>
        </div>
      </div>
      <div
        class="c4"
        data-testid="collapse-body"
      />
    </div>
  </div>
</body>
`;

exports[`CollapseSection test collapse section render 1`] = `
.c1 {
  margin-top: 3.75rem;
  margin-bottom: 0.75rem;
}

.c1[data-collapsed] + .c0 {
  margin-top: 0;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.5rem;
}

.c3:hover {
  cursor: pointer;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  min-height: 1.5rem;
}

.c4 {
  margin-top: 2rem;
}

<body>
  <div>
    <div
      class="c0 c1"
      data-testid="collapse-section"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
          data-testid="collapse-button"
        >
          <div
            class=""
            data-testid="collapse-title"
          >
            title
          </div>
          <div
            class=""
          >
            <svg />
          </div>
        </div>
      </div>
      <div
        class="c4"
        data-testid="collapse-body"
      >
        <div>
          Content
        </div>
      </div>
    </div>
  </div>
</body>
`;
